# geizhals-scraper-api

./: Cargo.toml  README.md
src/: api.rs  main.rs  models.rs  scraper.rs  utils.rs
src/defaults/: mod.rs
src/routes/: mod.rs  search.rs
