[package]
name = "geizhals-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
csv = "1.3.1"
dialoguer = "0.11.0"
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
